--- a/resapp/android/build.gradle
+++ b/resapp/android/build.gradle
@@ -5,6 +5,10 @@ allprojects {
     }
 }
 
+dependencies {
+
+}
+
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
