--- a/resapp/pubspec.yaml
+++ b/resapp/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.8.1
+  cloud_firestore: ^5.5.1
+  firebase_auth: ^5.3.4
+  fluttertoast: ^8.2.8
+
 
 dev_dependencies:
   flutter_test:
