--- a/resapp/pubspec.yaml
+++ b/resapp/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.5.1
   firebase_auth: ^5.3.4
   fluttertoast: ^8.2.8
+  flutter_staggered_grid_view: ^0.6.1
 
 
 dev_dependencies:
