--- a/resapp/pubspec.yaml
+++ b/resapp/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^5.3.4
   fluttertoast: ^8.2.8
   flutter_staggered_grid_view: ^0.6.1
+  audioplayers: ^6.1.0
+  just_audio: ^0.9.43
 
 
 dev_dependencies:
@@ -59,6 +61,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/
+    - assets/audio/
+    
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -66,9 +73,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
